force-app/main/default/objects/CaseEvent__e/CaseEvent__e.object-meta.xml
<CustomObject>
    <label>CaseEvent</label>
    <pluralLabel>CaseEvent</pluralLabel>
</CustomObject>