force-app/main/default/objects/CaseEvent__e/fields/CommentBody__c.field-meta.xml
<CustomField>
    <fullName>CommentBody__c</fullName>
    <label>CommentBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>