force-app/main/default/objects/CaseEvent__e/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>CreatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>