force-app/main/default/objects/CaseEvent__e/fields/Keyword2__c.field-meta.xml
<CustomField>
    <fullName>Keyword2__c</fullName>
    <label>Keyword2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>