force-app/main/default/objects/CaseEvent__e/fields/LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy__c</fullName>
    <label>LastModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>