force-app/main/default/objects/CaseEvent__e/fields/OracleInvoiceNumbers__c.field-meta.xml
<CustomField>
    <fullName>OracleInvoiceNumbers__c</fullName>
    <label>OracleInvoiceNumbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>