force-app/main/default/objects/CaseEvent__e/fields/WinId__c.field-meta.xml
<CustomField>
    <fullName>WinId__c</fullName>
    <label>WinId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>