force-app/main/default/objects/CaseEvent__e/fields/WinInvoiceNumbers__c.field-meta.xml
<CustomField>
    <fullName>WinInvoiceNumbers__c</fullName>
    <label>WinInvoiceNumbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>